--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
     <g class="nodes"></g>
   </svg>
 
-  <script src="home/Home-script.js"></script>
+  <script src="Home-script.js"></script>
 </body>
 </html>
